--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,7 +14,8 @@
     "@blueprintjs/core": "^5.7.1",
     "axios": "^1.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
